gcc/testsuite/rust/rustc/ui/conditional-compilation/cfg_accessible-unstable.rs
#[cfg_accessible(std)] // { dg-error ".E0658." "" { target *-*-* } }
fn main() {}

